# FinancesManagement

./: .gitignore  FinancesManagement.cabal  README.md  stack.yaml
app/: Main.hs
src/: Analysis.hs  Budgets.hs  Display.hs  Persistence.hs  Records.hs  Reports.hs  Rules.hs  Simulation.hs  Types.hs
