cabal-version:      2.4
name:               FinancesManagement
version:            0.1.0.0
build-type:         Simple

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

library
  import:           warnings
  exposed-modules:
      Types
    , Records
    , Display
    , Persistence
    , Rules
  hs-source-dirs:   src
  build-depends:
      base   >= 4.7 && < 5
    , time   >= 1.9
  default-language: Haskell2010

executable FinancesManagement
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
      base              >= 4.7 && < 5
    , time              >= 1.9
    , FinancesManagement
  default-language: Haskell2010
